# water_level

./: .gitignore  README.md  cron.sh  pyproject.toml  read_from_arduino.py  water_config.ini
_version_3_0/: README.md  pyproject.toml  water-level.py
scripts/: update_water_level.sh  water_level.service  water_lever_timer
version_2_0/: README.md  pyproject.toml  water_config.ini  water_level.py  water_level_arduino.ino
water_level/: read_from_arduino.py
water_level_arduino/: water_level_arduino.ino
