[tool.poetry]
name = "water-level"
version = "1.1.1"
description = ""
authors = ["pwielgor <pwielgor@camk.edu.pl>"]
readme = "README.md"
packages = [{include = "water_level"}]

[tool.poetry.dependencies]
python = "^3.9"
pyserial = ">=3.5"
serverish = {git = "https://github.com/AkondLab/serverish.git", branch = "ernest_development"}


[tool.poetry.scripts]
water_level = "water_level.read_from_arduino:main"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
